<resources>
    <string name="app_name">OLT Bestelapp</string>
    <string name="orderlist_orderbtn">Bestel</string>
    <string name="confirmation_confirmbtn">Bevestig</string>
    <string name="ordersucces_succesmsg">Uw bestelling is succesvol ontvangen, dit wordt zodadelijk naar uw tafel gebracht. Gelieve het correcte aantal bonnen klaar te leggen!</string>
    <string name="LOREM_KORT">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="LOREM_LANG">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</string>
    <string name="ordersucces_backbtn">Startpagina</string>
    <string name="ordersuccess_bannerdescr">Eventbanner</string>
    <string name="title_orderbtn">Plaats bestelling</string>
    <string name="title_qrbtn">Scan QR code</string>
    <string name="title_sponsorbtn">Wij danken onze sponsors</string>
    <string name="title_welcomemsg">Welkom bij OLT Kemzeke 2020</string>
    <string name="title_bannerdesc">Eventbanner</string>
    <string name="listitem_orderlist_imagedesc">Picture of product</string>
    <string name="listitem_orderlist_inputhint">Aantal</string>
    <string name="listitem_orderlist_upbutton">+1</string>
    <string name="listitem_orderlist_downbutton">-1</string>
    <string name="listitem_orderlist_defaultamount">0</string>
    <string name="app_btntext_back">Terug</string>
</resources>