<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="orderSuccesViewModel"
            type="com.example.bestelapp.fragments.ordersucces.OrderSuccesViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_ordersucces_backbtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_NORMAL"
            android:layout_marginEnd="@dimen/margin_NORMAL"
            android:layout_marginBottom="@dimen/margin_NORMAL"
            android:text="@string/ordersucces_backbtn"
            android:onClick="@{() -> orderSuccesViewModel.onBackClicked()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/iv_ordersucces_banner"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_NORMAL"
            android:layout_marginTop="@dimen/margin_NORMAL"
            android:layout_marginEnd="@dimen/margin_NORMAL"
            android:contentDescription="@string/ordersuccess_bannerdescr"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/banner" />

        <TextView
            android:id="@+id/tv_ordersucces_succesmsg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_NORMAL"
            android:layout_marginTop="@dimen/margin_NORMAL"
            android:layout_marginEnd="@dimen/margin_NORMAL"
            android:layout_marginBottom="@dimen/margin_NORMAL"
            android:text="@string/ordersucces_succesmsg"
            app:layout_constraintBottom_toTopOf="@+id/btn_ordersucces_backbtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="@fraction/frac_banner_top" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>