<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="clickListener"
            type="com.example.bestelapp.fragments.orderlist.ProductItemListener" />

        <variable
            name="product"
            type="com.example.bestelapp.data.product.ModelProduct" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/gl_orderlist_product_productimage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_SMALL"
            android:layout_marginTop="@dimen/margin_SMALL"
            android:layout_marginBottom="@dimen/margin_SMALL"
            android:contentDescription="@string/listitem_orderlist_imagedesc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="@fraction/frac_icon_left"
            app:productImage="@{product}"
            tools:srcCompat="@drawable/ic_android" />

        <TextView
            android:id="@+id/tv_orderlist_product_productname"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_SMALL"
            android:layout_marginBottom="@dimen/margin_SMALL"
            app:layout_constraintBottom_toTopOf="@+id/tv_orderlist_product_productdescription"
            app:layout_constraintEnd_toStartOf="@+id/btn_orderlist_product_upbutton"
            app:layout_constraintStart_toEndOf="@+id/gl_orderlist_product_productimage"
            app:layout_constraintTop_toTopOf="parent"
            app:productName="@{product}"
            tools:text="Bier" />

        <TextView
            android:id="@+id/tv_orderlist_product_productdescription"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/tv_orderlist_product_productprice"
            app:layout_constraintEnd_toStartOf="@+id/tv_orderlist_product_amount"
            app:layout_constraintStart_toEndOf="@+id/gl_orderlist_product_productimage"
            app:layout_constraintTop_toBottomOf="@+id/tv_orderlist_product_productname"
            app:productDescription="@{product}"
            tools:text="Een lekkere pint" />

        <TextView
            android:id="@+id/tv_orderlist_product_productprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_SMALL"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_orderlist_product_downbutton"
            app:layout_constraintStart_toEndOf="@+id/gl_orderlist_product_productimage"
            app:layout_constraintTop_toBottomOf="@+id/tv_orderlist_product_productdescription"
            app:productPrice="@{product}"
            tools:text="2 bonnen" />

        <TextView
            android:id="@+id/tv_orderlist_product_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_SMALL"
            android:background="@drawable/border"
            android:text="@string/listitem_orderlist_defaultamount"
            android:textAlignment="center"
            app:productAmount="@{product}"
            app:layout_constraintBottom_toTopOf="@+id/btn_orderlist_product_downbutton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_orderlist_product_upbutton"
            app:layout_constraintWidth_percent="@fraction/frac_button_right" />

        <Button
            android:id="@+id/btn_orderlist_product_upbutton"
            android:text="@string/listitem_orderlist_upbutton"
            style="@style/ListButton"
            android:onClick="@{() -> clickListener.onUpClick(product)}"
            app:layout_constraintBottom_toTopOf="@+id/tv_orderlist_product_amount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="@fraction/frac_button_right" />

        <Button
            android:id="@+id/btn_orderlist_product_downbutton"
            android:text="@string/listitem_orderlist_downbutton"
            style="@style/ListButton"
            android:onClick="@{() -> clickListener.onDownClick(product)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_orderlist_product_amount"
            app:layout_constraintWidth_percent="@fraction/frac_button_right" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>